# WyPR

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  index.html  setup.py
docs/: INSTALL.md  RUNNING.md
docs/.github/: PR_TEMPLATE.md
files/: bib.txt  glab.css
gss/: .gitignore  README.md  color_space_3d.py  features3d.py  selective_search_3d_ensemble.py  selective_search_3d_eval.py  selective_search_3d_run.py  utils.py
shape_det/: CMakeLists.txt  README.md  generate_scripts.py  preprocess.py  region_growing_on_point_set_3.cpp
wypr/config/: config.yaml
wypr/config/backbone/: pointnet2.yaml
wypr/config/dataset/: scannet.yaml
wypr/dataset/s3dis/: .gitignore  README.md  prepare_all_points.py  preprocess_for_gss.py  process.py  s3dis.py  vis.py
wypr/dataset/s3dis/meta/: class_names.txt
wypr/dataset/scannet/: README.md  preprocess_scannet_all_points.py  scannet.py  util.py  vis.py
wypr/evaluation/: __init__.py  ap_helper.py  ar_helper.py  cf_matrix.py  iou_helper.py
wypr/modeling/backbone/: __init__.py  backbone_pointnet2.py
wypr/modeling/backbone/pointnet2/: .gitignore  pointnet2_modules.py  pointnet2_test.py  pointnet2_utils.py  pytorch_utils.py  setup.py
wypr/modeling/backbone/pointnet2/_ext-src/include/: ball_query.h  cuda_utils.h  group_points.h  (+3 more)
wypr/modeling/models/: __init__.py  meta_arch.py
wypr/modeling/seg_head/: __init__.py  seg_head_pointnet2.py
wypr/tools/: eval.py  train.py
wypr/utils/: box_util.py  eval_det.py  eval_prop.py  metric_util.py  nms.py  nn_distance.py  pc_util.py  tf_logger.py  tf_visualizer.py  train_utils.py
(+9 files in other folders)
